--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>London Trip</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/imgcover/pexels-bill-emrich-230794-0.jpg" alt="img0">
+        <img src="img/imgcover/pexels-bill-emrich-230794-1.jpg" alt="img1">
+        <img src="img/imgcover/pexels-bill-emrich-230794-2.jpg" alt="img2">
+    </header>
+    <main>
+        <h2>Le mie spese</h2>
+        
+    </main>
 </body>
 </html>
