--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
     </header>
     <main>
         <h2>Le mie spese</h2>
-        
+<table>
+    <tr>
+        <th>Numero</th>
+        <th>Descrizione</th>
+        <th>Costo</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+    </tr>
+    <tr>
+        <td>Totale</td>
+        <td></td>
+        <td>360€</td>
+    </tr>
+</table>
     </main>
 </body>
 </html>
