--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>London Trip</title>
 </head>
 <body>
-    <header>
+    <header> <!--header contenente titolo e immagine di copertina-->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/imgcover/pexels-bill-emrich-230794-0.jpg" alt="img0">
         <img src="img/imgcover/pexels-bill-emrich-230794-1.jpg" alt="img1">
         <img src="img/imgcover/pexels-bill-emrich-230794-2.jpg" alt="img2">
     </header>
     <main>
-        <section>
+        <section> <!--prima section contenente tabella e secondo titolo-->
             <h2>Le mie spese</h2>
             <table>
                 <tr>
@@ -43,6 +43,7 @@
                 </tr>
             </table>
         </section>
+
 </main>
 </body>
 </html>
