--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="img/imgcover/pexels-bill-emrich-230794-0.jpg" alt="img0">
         <img src="img/imgcover/pexels-bill-emrich-230794-1.jpg" alt="img1">
         <img src="img/imgcover/pexels-bill-emrich-230794-2.jpg" alt="img2">
+        <hr>
     </header>
     <main>
         <section> <!--prima section contenente tabella e secondo titolo-->
@@ -43,7 +44,18 @@
                 </tr>
             </table>
         </section>
+        <hr>
+        <section> <!--seconda section contenente checklist-->
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+         </section>
+         <hr>
 
-</main>
+    </main>
 </body>
 </html>
