--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
             </ul>
          </section>
          <hr>
+         <section> <!--terza section contentneti info-->
+            <h3>Info Utili</h3>
+            <ol>
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong>- Emergenza</li>
+                        <li><strong>101</strong>- Numero Polizia</li>
+                        <li><strong>111</strong>- Numero assistenza medica</li>
+                    </ul>
+
+                </li>
+            </ol>
+            <ol>
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome Hotel</strong>: Buckingam Palace</li>
+                        <li><strong>Indirizzo Hotel</strong>: Westminister London SW1A1AA, Regno Unito</li>
+                    </ul>
+                </li>
+            </ol>
+            <ol>
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo i Ritorno</strong>: YI236X, ore 18.30 da London Heatrow </li>
+                    </ul>
+                </li>
+            </ol>
+         </section>
+         <hr>
 
     </main>
 </body>
