--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
             </ol>
          </section>
          <hr>
-
+         <section> <!--quarta section finale contenenti foto-->
+          <h3>Le Foto</h3>
+          <img src="img/london-400x400-compressor_0.jpg" alt="bridge">
+          <img src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="tower">
+         </section>
     </main>
 </body>
 </html>
