--- a/index.html
+++ b/index.html
@@ -1,95 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>London Trip</title>
-</head>
-<body>
-    <header> <!--header contenente titolo e immagine di copertina-->
-        <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/imgcover/pexels-bill-emrich-230794-0.jpg" alt="img0">
-        <img src="img/imgcover/pexels-bill-emrich-230794-1.jpg" alt="img1">
-        <img src="img/imgcover/pexels-bill-emrich-230794-2.jpg" alt="img2">
-        <hr>
+  </head>
+  <body>
+    <header>
+      <!--header contenente titolo e immagine di copertina-->
+      <h1>Il mio Viaggio a Londra</h1>
+      <img src="img/imgcover/pexels-bill-emrich-230794-0.jpg" alt="img0" />
+      <img src="img/imgcover/pexels-bill-emrich-230794-1.jpg" alt="img1" />
+      <img src="img/imgcover/pexels-bill-emrich-230794-2.jpg" alt="img2" />
+      <hr />
     </header>
     <main>
-        <section> <!--prima section contenente tabella e secondo titolo-->
-            <h2>Le mie spese</h2>
-            <table>
-                <tr>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto aereo</td>
-                    <td>120€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto aereo</td>
-                    <td>120€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto aereo</td>
-                    <td>120€</td>
-                </tr>
-                <tr>
-                    <td>Totale</td>
-                    <td></td>
-                    <td>360€</td>
-                </tr>
-            </table>
-        </section>
-        <hr>
-        <section> <!--seconda section contenente checklist-->
-            <h3>Cose da fare</h3>
+      <section>
+        <!--prima section contenente tabella e secondo titolo-->
+        <h2>Le mie spese</h2>
+        <table>
+          <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360€</td>
+          </tr>
+        </table>
+      </section>
+      <hr />
+      <section>
+        <!--seconda section contenente checklist-->
+        <h3>Cose da fare</h3>
+        <ul>
+          <li>Visitare la Tower of London &cross;;</li>
+          <li>Visitare greenwich &check;</li>
+          <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+          <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+        </ul>
+      </section>
+      <hr />
+      <section>
+        <!--terza section contentneti info-->
+        <h3>Info Utili</h3>
+        <ol>
+          <li>
+            Numeri utili di emergenza
             <ul>
-                <li>Visitare la Tower of London &cross;;</li>
-                <li>Visitare greenwich &check;</li>
-                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
-                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+              <li><strong>999</strong>- Emergenza</li>
+              <li><strong>101</strong>- Numero Polizia</li>
+              <li><strong>111</strong>- Numero assistenza medica</li>
             </ul>
-         </section>
-         <hr>
-         <section> <!--terza section contentneti info-->
-            <h3>Info Utili</h3>
-            <ol>
-                <li>Numeri utili di emergenza
-                    <ul>
-                        <li><strong>999</strong>- Emergenza</li>
-                        <li><strong>101</strong>- Numero Polizia</li>
-                        <li><strong>111</strong>- Numero assistenza medica</li>
-                    </ul>
-
-                </li>
-            </ol>
-            <ol>
-                <li>Hotel
-                    <ul>
-                        <li><strong>Nome Hotel</strong>: Buckingam Palace</li>
-                        <li><strong>Indirizzo Hotel</strong>: Westminister London SW1A1AA, Regno Unito</li>
-                    </ul>
-                </li>
-            </ol>
-            <ol>
-                <li>Aereo
-                    <ul>
-                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo i Ritorno</strong>: YI236X, ore 18.30 da London Heatrow </li>
-                    </ul>
-                </li>
-            </ol>
-         </section>
-         <hr>
-         <section> <!--quarta section finale contenenti foto-->
-          <h3>Le Foto</h3>
-          <img src="img/london-400x400-compressor_0.jpg" alt="bridge">
-          <img src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="tower">
-         </section>
+          </li>
+          <li>
+            Hotel
+            <ul>
+              <li><strong>Nome Hotel</strong>: Buckingam Palace</li>
+              <li>
+                <strong>Indirizzo Hotel</strong>: Westminister London SW1A1AA,
+                Regno Unito
+              </li>
+            </ul>
+          </li>
+          <li>
+            Aereo
+            <ul>
+              <li>
+                <strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano
+                Malpensa
+              </li>
+              <li>
+                <strong>Volo i Ritorno</strong>: YI236X, ore 18.30 da London
+                Heatrow
+              </li>
+            </ul>
+          </li>
+        </ol>
+      </section>
+      <hr />
+      <section>
+        <!--quarta section finale contenenti foto-->
+        <h3>Le Foto</h3>
+        <img src="img/london-400x400-compressor_0.jpg" alt="bridge" />
+        <img
+          src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg"
+          alt="tower"
+        />
+      </section>
     </main>
-</body>
+  </body>
 </html>
